--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <section class="top-banner">
+ <div class="helf-width">
   <h1>Welcome To</h1>
-  <h1>Peter Parker World</h1>
+  <h1><span class="one_1">Peter Parker</span> World</h1>
+  <h3>Build Climber and Train Stopper</h3>
+
+  <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+
+
+  <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>    
+</div>
+
+ 
+  <div class="helf-width"> 
+  <img src="images/jhankar.png" alt="#">
+</div>
+</section>   
+ 
 
   
 
