--- a/index.html
+++ b/index.html
@@ -29,7 +29,41 @@
 </div>
 </section>   
  
+<section class="dream-big">
+<div class="helf-width">
+<img src="images/jhankar2.png" alt="#">
+</div>
 
+<div class="helf-width">
+<h1>Dream Big</h1>
+<h2>Become a web developer</h2>
+<p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+<a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">DOWNLOAD RESUME</a>    
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
   
 
     
